# strands-strudel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-releease.yml
strands_strudel/: __init__.py  strudel.py
